letters' metadata interface

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -174,8 +174,10 @@
 		"AVAILABILITY": "Availability",
 		"COLOPHON": "Colophon",
 		"CORRECTION": "Correction principles",
+		"CORRESP_DESC": "Correspondence Description",
+		"COUNTRY": "Country",
 		"DATE": "Date",
-		"DECO_DESC": "Decoration description",
+		"DECO_DESC": "Decoration Description",
 		"EDITION": "Edition",
 		"EDITION_STMT": "Edition Statement",
 		"EDITOR": "Editor",
@@ -190,29 +192,40 @@
 		"INTERP_GRP": "Interpretations",
 		"INTERPRETATION": "Interpretive information",
 		"INTRO": "Intro",
-		"LANG_USAGE": "Language usage",
+		"INSTITUTION": "Institution",
+		"LANG_USAGE": "Languages",
 		"MS_CONTENTS": "Manuscript contents",
 		"MS_IDENTIFIER": "Ms Identifier",
 		"MS_NAME": "Ms Name",
 		"NORMALIZATION": "Normalization or regularization principles",
 		"NOTES_STMT": "Notes",
+		"NO_INFO": "No data",
 		"ORIGIN": "Origin",
-		"PARTIC_DESC": "Participation description",
+		"PARTIC_DESC": "Participation Description",
 		"PHYS_DESC": "Physical Description",
 		"PRINCIPAL": "Principal researcher",
-		"PROJECT_DESC": "Project description",
+		"PROJECT_DESC": "Project Description",
 		"PUB_PLACE": "Place of publication",
 		"PUBLICATION_STMT": "About the publication",
 		"PUBLISHER": "Publisher",
 		"PUNCTUATION": "Punctuation marks principles",
 		"QUOTATION": "Quotation marks principles",
+		"RECEIVER": "Receiver",
+		"DATE_RECEIVED": "Date Received",
 		"REFERENCES": "References",
 		"REFS_DECL": "References declaration",
 		"REPOSITORY": "Repository",
 		"RESP_STMT": "Responsable",
 		"REVISION_DESC": "Revision Description",
 		"SEGMENTATION": "Segmentation principles",
-		"SERIES_STMT": "Series",
+		"SENDER": "Sender",
+		"DATE_SENT": "Date Sent",
+		"FROM_DATE": "From",
+		"TO_DATE": "To",
+		"SERIES_STMT": "Series Description",
+		"SERIES_MAIN_TITLE": "Series Main Title",
+		"SERIES_SUB_TITLE": "Series Subtitle",
+		"SERIES_UNIT": "Series Unit",
 		"SETTLEMENT": "Settlement",
 		"SOURCE_DESC": "Source description",
 		"SPONSOR": "Sponsor",
