--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -175,6 +175,8 @@
 		"AVAILABILITY": "Disponibilità",
 		"COLOPHON": "Colophon",
 		"CORRECTION": "Principi di correzione",
+		"CORRESP_DESC": "Descrizione della Corrispondenza",
+		"COUNTRY": "Nazione",
 		"DATE": "Data",
 		"DECO_DESC": "Descrizione delle decorazioni",
 		"EDITION": "Edizione",
@@ -191,12 +193,14 @@
 		"INTERP_GRP": "Interpretazioni",
 		"INTERPRETATION": "Informazioni interpretative",
 		"INTRO": "Introduzione",
-		"LANG_USAGE": "Utilizzo della lingua",
+		"INSTITUTION": "Istituzione",
+		"LANG_USAGE": "Lingue",
 		"MS_CONTENTS": "Contenuto del manoscritto",
 		"MS_IDENTIFIER": "Identificatore del manoscritto",
 		"MS_NAME": "Nome del manoscritto",
 		"NORMALIZATION": "Principi di normalizzazione o regolarizzazione",
 		"NOTES_STMT": "Annotazioni",
+		"NO_INFO": "Dati mancanti",
 		"ORIGIN": "Origine",
 		"PARTIC_DESC": "Partecipazione",
 		"PRINCIPAL": "Ricercatore principale",
@@ -207,15 +211,24 @@
 		"PUBLISHER": "Editore",
 		"PUNCTUATION": "Principi di punteggiatura",
 		"QUOTATION": "Principi di citazione",
+		"RECEIVER": "Destinatario",
+		"DATE_RECEIVED": "Date Ricezione",
 		"REFERENCES": "Riferimenti",
 		"REFS_DECL": "Dichiarazione di riferimenti",
 		"REPOSITORY": "Archivio",
 		"RESP_STMT": "Responsabile",
 		"REVISION_DESC": "Descrizione della revisione",
 		"SEGMENTATION": "Principi di segmentazione",
-		"SERIES_STMT": "Serie",
+		"SENDER": "Mittente",
+		"DATE_SENT": "Data Invio",
+		"FROM_DATE": "Da",
+		"TO_DATE": "A",
+		"SERIES_STMT": "Descrizione della Serie",
+		"SERIES_MAIN_TITLE": "Titolo principale della Serie",
+		"SERIES_SUB_TITLE": "Sottotitolo della Serie",
+		"SERIES_UNIT": "Unità della Serie",
 		"SETTLEMENT": "Insediamento",
-		"SOURCE_DESC": "Descrizione della fonte",
+		"SOURCE_DESC": "Descrizione della Fonte",
 		"SPONSOR": "Sponsor",
 		"STD_VALS": "Valori standard",
 		"SUPPORT_DESC": "Descrizione del supporto",
