diversification of works in entities selection
+ error management 4 letters info
+ correction of background colors in works entities info

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -107,8 +107,12 @@
 		"ENTITY_TYPE_": "Name",
 		"ENTITY_TYPE_ORG": "Organization name",
 		"ENTITY_TYPE_PERSON": "Person name",
+		"ENTITY_TYPE_RS": "Indirectly Cited Person",
 		"ENTITY_TYPE_PLACE": "Place name",
 		"ENTITY_TYPE_RELATION": "Relation name",
+		"ENTITY_TYPE_BIBL": "Work",
+		"ENTITY_TYPE_PRINT": "Print Work",
+		"ENTITY_TYPE_MANUSCRIPT": "Manuscript Work",
 		"GENERIC": "Generic List",
 		"LIST": "List",
 		"NO_ELEMENTS": "No elements in this list",
@@ -116,6 +120,8 @@
 		"ORG": "List of Organization",
 		"PERSON": "List of Persons",
 		"PLACE": "List of Places",
+		"MANUSCRIPTS": "List of Manuscripts",
+		"PRINTS": "List of Prints",
 		"RELATION": "List of Relations",
 		"RELATION_ACTIVE": "Active",
 		"RELATION_MUTUAL": "Mutual",
