--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -108,16 +108,22 @@
 		"ENTITY_TYPE_": "Nome",
 		"ENTITY_TYPE_ORG": "Nome di organizzazione",
 		"ENTITY_TYPE_PERSON": "Nome di persona",
+		"ENTITY_TYPE_RS": "Persona citata indirettamente",
 		"ENTITY_TYPE_PLACE": "Nome di luogo",
 		"ENTITY_TYPE_RELATION": "Nome di relazione",
+		"ENTITY_TYPE_BIBL": "Opera",
+		"ENTITY_TYPE_PRINT": "Opera a Stampa",
+		"ENTITY_TYPE_MANUSCRIPT": "Manoscritto",
 		"GENERIC": "Lista generica",
 		"LIST": "Lista",
 		"NO_ELEMENTS": "Nessun elemento in questa lista",
 		"OCCURRENCE": "Fol. {{pageLabel}} ({{docLabel}})",
-		"ORG": "Lista delle organizzazioni",
-		"PERSON": "Lista delle persone",
-		"PLACE": "Lista dei luoghi",
+		"ORG": "Lista delle Organizzazioni",
+		"PERSON": "Lista delle Persone",
+		"PLACE": "Lista dei Luoghi",
 		"RELATION": "Lista delle relazioni",
+		"MANUSCRIPTS": "Lista dei Manoscritti",
+		"PRINTS": "Lista delle Opere a Stampa",
 		"RELATION_ACTIVE": "Attivo",
 		"RELATION_MUTUAL": "Mutuale",
 		"RELATION_PASSIVE": "Passivo",
