parsing project info same as letter one
+ no more msdesc button
+ filedesc function
+ respdesc parsing

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -221,7 +221,11 @@
 		"REFERENCES": "References",
 		"REFS_DECL": "References declaration",
 		"REPOSITORY": "Repository",
-		"RESP_STMT": "Responsable",
+		"RESP_STMT": "Team",
+		"RESP_TRANSCRIPTION": "Responsable of the Transcription",
+		"RESP_MARKING": "Responsable of the Marking",
+		"RESP_EDITING": "Responsable for the Editing",
+		"RESP_OTHER": "Collaborators",
 		"REVISION_DESC": "Revision Description",
 		"SEGMENTATION": "Segmentation principles",
 		"SENDER": "Sender",
