--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -222,7 +222,11 @@
 		"REFERENCES": "Riferimenti",
 		"REFS_DECL": "Dichiarazione di riferimenti",
 		"REPOSITORY": "Archivio",
-		"RESP_STMT": "Responsabile",
+		"RESP_STMT": "Team",
+		"RESP_TRANSCRIPTION": "Responsabili della Trascrizione",
+		"RESP_MARKING": "Responsabili della Marcatura",
+		"RESP_EDITING": "Responsabili dell'Editing",
+		"RESP_OTHER": "Collaboratori",
 		"REVISION_DESC": "Descrizione della revisione",
 		"SEGMENTATION": "Principi di segmentazione",
 		"SENDER": "Mittente",
