--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -200,6 +200,7 @@
 		"INTRO": "Intro",
 		"INSTITUTION": "Institution",
 		"LANG_USAGE": "Languages",
+		"LICENCE": "Licence",
 		"MS_CONTENTS": "Manuscript contents",
 		"MS_IDENTIFIER": "Ms Identifier",
 		"MS_NAME": "Ms Name",
