--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -201,6 +201,7 @@
 		"INTRO": "Introduzione",
 		"INSTITUTION": "Istituzione",
 		"LANG_USAGE": "Lingue",
+		"LICENCE": "Licenza",
 		"MS_CONTENTS": "Contenuto del manoscritto",
 		"MS_IDENTIFIER": "Identificatore del manoscritto",
 		"MS_NAME": "Nome del manoscritto",
