publStmt parsing, parsing funs refactoring

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -231,8 +231,8 @@
 		"SEGMENTATION": "Segmentation principles",
 		"SENDER": "Sender",
 		"DATE_SENT": "Date Sent",
-		"FROM_DATE": "From",
-		"TO_DATE": "To",
+		"FROM_DATE": "from",
+		"TO_DATE": "to",
 		"SERIES_STMT": "Series Description",
 		"SERIES_MAIN_TITLE": "Series Main Title",
 		"SERIES_SUB_TITLE": "Series Subtitle",
