--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -232,8 +232,8 @@
 		"SEGMENTATION": "Principi di segmentazione",
 		"SENDER": "Mittente",
 		"DATE_SENT": "Data Invio",
-		"FROM_DATE": "Da",
-		"TO_DATE": "A",
+		"FROM_DATE": "da",
+		"TO_DATE": "a",
 		"SERIES_STMT": "Descrizione della Serie",
 		"SERIES_MAIN_TITLE": "Titolo principale della Serie",
 		"SERIES_SUB_TITLE": "Sottotitolo della Serie",
