--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -118,12 +118,13 @@
 		"LIST": "Lista",
 		"NO_ELEMENTS": "Nessun elemento in questa lista",
 		"OCCURRENCE": "Fol. {{pageLabel}} ({{docLabel}})",
-		"ORG": "Lista delle Organizzazioni",
-		"PERSON": "Lista delle Persone",
-		"PLACE": "Lista dei Luoghi",
+		"ORG": "Organizzazioni",
+		"PERSON": "Persone",
+		"STAFF": "Staff",
+		"PLACE": "Luoghi",
 		"RELATION": "Lista delle relazioni",
-		"MANUSCRIPTS": "Lista dei Manoscritti",
-		"PRINTS": "Lista delle Opere a Stampa",
+		"MANUSCRIPTS": "Manoscritti",
+		"PRINTS": "Opere a Stampa",
 		"RELATION_ACTIVE": "Attivo",
 		"RELATION_MUTUAL": "Mutuale",
 		"RELATION_PASSIVE": "Passivo",
