--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -117,11 +117,12 @@
 		"LIST": "List",
 		"NO_ELEMENTS": "No elements in this list",
 		"OCCURRENCE": "{{docLabel}} - Fol. {{pageLabel}}",
-		"ORG": "List of Organization",
-		"PERSON": "List of Persons",
-		"PLACE": "List of Places",
-		"MANUSCRIPTS": "List of Manuscripts",
-		"PRINTS": "List of Prints",
+		"ORG": "Organizations",
+		"PERSON": "People",
+		"PLACE": "Places",
+		"MANUSCRIPTS": "Manuscripts",
+		"STAFF": "Staff",
+		"PRINTS": "Prints",
 		"RELATION": "List of Relations",
 		"RELATION_ACTIVE": "Active",
 		"RELATION_MUTUAL": "Mutual",
