pagination for entities list and other stuff
Pagination for named entities lists. Update to search button labels to use translation keys. Minor stuff: fixes to method call in select.directive.js, minor style adjustments for scrollable lists. Txt to txt mode deactivated.

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -383,5 +383,8 @@
 		"SHOW_EDGES": "Show edges",
 		"SHOW_SECTION_PLANES": "Show Section Planes",
 		"SHOW_SECTION_EDGES": "Show Section Edges"
+	},
+	"PAGINATION": {
+		"PAGE_OF": "Page {{current}} of {{total}}"
 	}
 }
