--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -72,7 +72,8 @@
 		"TOGGLE_NAVBAR": "Apri/chiudi barra di navigazione",
 		"SCHEMA": "Schema",
 		"search": "Ricerca",
-		"searchIndex": "Indice"
+		"searchIndex": "Indice",
+		"SEARCH": "Ricerca"
 	},
 	"CRITICAL_APPARATUS": {
 		"LACUNA_START": "inizio di una lacuna in ",
@@ -384,5 +385,8 @@
 		"SHOW_EDGES": "Mostra i bordi",
 		"SHOW_SECTION_PLANES": "Mostra la sezione dei piani",
 		"SHOW_SECTION_EDGES": "Mostra la sezione dei bordi"
+	},
+	"PAGINATION": {
+		"PAGE_OF": "Pagina {{current}} di {{total}}"
 	}
 }
