update to cdc IIIF URLs + ui improvements

--- a/evt-viewer/app/i18n/en.json
+++ b/evt-viewer/app/i18n/en.json
@@ -37,13 +37,13 @@
 		"CHANGE_LANGUAGE": "Change Language",
 		"COLOR_KEY": "Color keys",
 		"FILTERS": "Filters",
-		"FONT_CHANGE": "Change font size",
+		"FONT_CHANGE": "Text size",
 		"FONT_DECREASE": "Decrease font size",
 		"FONT_INCREASE": "Increase font size",
 		"FONT_RESET": "Reset font size",
 		"HEAT_MAP": "Heat Map",
 		"INFO": "Info",
-		"INFO_ABOUT_TEXT": "Information about this text",
+		"INFO_ABOUT_TEXT": "Letter info",
 		"IMAGE_TEXT_LINKING": "Image-Text Linking",
 		"HOTSPOTS": "Hotspots",
 		"LIST": "Lists",
@@ -54,6 +54,8 @@
 		"NO_WITNESSES_AVAILABLE": "No more witnesses available",
 		"OBJ": "3D Desc",
 		"OPEN_LIST": "Show entry in full list",
+		"EXTERNAL_LINK": "Open external link",
+		"VIEW_EXTERNAL": "View external catalog",
 		"PIN_REMOVE": "Remove Pin",
 		"PIN_TOGGLE": "Toggle Pin",
 		"SHOW_PINNED_ENTRIES": "Show pinned elements",
@@ -183,7 +185,8 @@
         "LOAD_OCCURRENCES": "Load Occurrences",
         "REFERENCE_COUNT_INFO": "{{count}} references",
         "NO_REFERENCE_DATA": "Unidentified entity",
-        "NO_REFERENCE_DATA_DESC": "This entity has not been identified in the reference system.",
+        "NO_REFERENCE_DATA_DESC": "Entity not yet identified.",
+        "CONTACT_BUTTON": "Help us identify it",
         "NO_REFERENCE_DATA_NOTE": ""
 	},
 	"NAMED_ENTITIES": {
@@ -191,6 +194,103 @@
 		"OCCURRENCES": "Occurrences",
 		"XML": "XML",
 		"MAP": "Map"
+	},
+	"NAMED_ENTITY_FIELDS": {
+		"persName": "Name",
+		"forename": "Name",
+		"forenameReligious": "Religious name",
+		"roleName": "Title",
+		"surname": "Surname",
+		"birth": "Birth",
+		"death": "Death",
+		"sex": "Sex",
+		"occupation": "Occupation",
+		"affiliation": "Affiliation",
+		"residence": "Residence",
+		"note": "Note",
+		"event": "Event",
+		"founded": "Founded",
+		"idno": "Identifier",
+		"relations": "Relations",
+		"actors": "Actors",
+		"orgName": "Organization name",
+		"geoName": "Geographic name",
+		"geogFeat": "Geographic feature",
+		"district": "District",
+		"settlement": "Settlement",
+		"region": "Region",
+		"country": "Country",
+		"bloc": "Bloc",
+		"geo": "Coordinates",
+		"address": "Address",
+		"street": "Street",
+		"postCode": "Postal code",
+		"title": "Title",
+		"author": "Author",
+		"editor": "Editor",
+		"imprint": "Printed",
+		"publisher": "Printer",
+		"pubPlace": "Publication place",
+		"date": "Date",
+		"msIdentifier": "Manuscript Location",
+		"history": "History",
+		"origDate": "Original Date",
+		"origPlace": "Original Place",
+		"repository": "Repository",
+		"acquisition": "Acquisition",
+		"provenance": "Provenance",
+		"origin": "Origin",
+		"msContents": "Contents",
+		"msItem": "Item",
+		"copist": "Copyist",
+		"sameAs": "External link",
+		"dlclId": "Project ID"
+	},
+	"ATTRIBUTE_NAMES": {
+		"type": "Type",
+		"value": "Value",
+		"when": "When",
+		"when-iso": "Date",
+		"ref": "Reference",
+		"key": "Key",
+		"sameAs": "Same as"
+	},
+	"ATTRIBUTE_VALUES": {
+		"m": "Male",
+		"f": "Female",
+		"religious": "Religious",
+		"nobility": "Nobility",
+		"nickname": "Nickname",
+		"pseudonym": "Pseudonym",
+		"alternative": "Alternative",
+		"translation": "Translation",
+		"civil": "Civil",
+		"military": "Military",
+		"ecclesiastical": "Ecclesiastical",
+		"uniform": "Uniform",
+		"copist": "Copist",
+		"main": "Main",
+		"subseries": "Subseries",
+		"letter": "Letter",
+		"attachment": "Attachment",
+		"transcription": "Transcription",
+		"print": "Print",
+		"manuscript": "Manuscript",
+		"person": "Person",
+		"settlement": "Settlement",
+		"nation": "Nation",
+		"region": "Region",
+		"hill": "Hill",
+		"park": "Park",
+		"stream": "Stream",
+		"bay": "Bay",
+		"continent": "Continent",
+		"historic-region": "Historic region",
+		"VIAF": "VIAF",
+		"GND": "GND",
+		"ISNI": "ISNI",
+		"SBN": "SBN",
+		"geonames": "GeoNames"
 	},
 	"PROJECT_INFO": {
 		"AUTHOR": "Author",
@@ -412,5 +512,6 @@
 	},
 	"PAGINATION": {
 		"PAGE_OF": "Page {{current}} of {{total}}"
-	}
+	},
+	"OF": "of"
 }
