--- a/evt-viewer/app/i18n/it.json
+++ b/evt-viewer/app/i18n/it.json
@@ -36,14 +36,14 @@
 		"BOOKMARK": "Segnalibro",
 		"CHANGE_LANGUAGE": "Cambia lingua",
 		"COLOR_KEY": "Legenda colori",
-		"FONT_CHANGE": "Modifica dimensione carattere",
+		"FONT_CHANGE": "Dimensione testo",
 		"FONT_DECREASE": "Riduci dimensione carattere",
 		"FONT_INCREASE": "Aumenta dimensione carattere",
 		"FONT_RESET": "Reimposta dimensione carattere",
 		"FILTERS": "Filtri",
 		"HEAT_MAP": "Mappa di variabilità",
 		"INFO": "Info",
-		"INFO_ABOUT_TEXT": "Informazioni su questo testo",
+		"INFO_ABOUT_TEXT": "Info lettera",
 		"IMAGE_TEXT_LINKING": "Collegamento Testo Immagine",
 		"HOTSPOTS": "Hotspots",
 		"LIST": "Liste",
@@ -54,6 +54,8 @@
 		"NO_WITNESSES_AVAILABLE": "Nessun altro testimone disponibile",
 		"OBJ": "3D Desc",
 		"OPEN_LIST": "Mostra nell'elenco completo",
+		"EXTERNAL_LINK": "Apri link esterno",
+		"VIEW_EXTERNAL": "Vedi catalogo esterno",
 		"PIN_REMOVE": "Rimuovi Pin",
 		"PIN_TOGGLE": "Aggiungi Pin",
 		"SHOW_PINNED_ENTRIES": "Mostra elementi \"pinnati\"",
@@ -181,7 +183,8 @@
         "LOAD_OCCURRENCES": "Carica Occorrenze",
         "REFERENCE_COUNT_INFO": "{{count}} riferimenti",
         "NO_REFERENCE_DATA": "Entità non identificata",
-        "NO_REFERENCE_DATA_DESC": "Questa entità non è stata identificata nel sistema di riferimento.",
+        "NO_REFERENCE_DATA_DESC": "Entità non ancora identificata.",
+        "CONTACT_BUTTON": "Aiutaci a identificarla",
         "NO_REFERENCE_DATA_NOTE": ""
 	},
 	"NAMED_ENTITIES": {
@@ -189,6 +192,112 @@
 		"OCCURRENCES": "Occorrenze",
 		"XML": "XML",
 		"MAP": "Mappa"
+	},
+	"NAMED_ENTITY_FIELDS": {
+		"persName": "Nome",
+		"forename": "Nome",
+		"forenameReligious": "Nome religioso",
+		"surname": "Cognome",
+		"roleName": "Titolo",
+		"birth": "Nascita",
+		"death": "Morte",
+		"sex": "Sesso",
+		"occupation": "Occupazione",
+		"affiliation": "Affiliazione",
+		"residence": "Residenza",
+		"location": "Località",
+		"placeName": "Luogo",
+		"note": "Note",
+		"event": "Evento",
+		"founded": "Fondazione",
+		"idno": "Identificatore",
+		"relations": "Relazioni",
+		"actors": "Attori",
+		"orgName": "Nome organizzazione",
+		"geoName": "Nome geografico",
+		"geogFeat": "Caratteristica geografica",
+		"district": "Distretto",
+		"settlement": "Città",
+		"region": "Regione",
+		"country": "Nazione",
+		"bloc": "Blocco",
+		"geo": "Coordinate",
+		"address": "Indirizzo",
+		"street": "Via",
+		"postCode": "Codice postale",
+		"title": "Titolo",
+		"author": "Autore",
+		"editor": "Editore",
+		"publisher": "Tipografo",
+		"imprint": "Stampato",
+		"pubPlace": "Luogo di pubblicazione",
+		"date": "Data",
+		"desc": "Descrizione",
+		"bibl": "Bibliografia",
+		"ref": "Riferimento",
+		"msIdentifier": "Collocazione manoscritto",
+		"history": "Storia",
+		"origDate": "Data di origine",
+		"origPlace": "Luogo di origine",
+		"repository": "Istituzione",
+		"acquisition": "Acquisizione",
+		"provenance": "Provenienza",
+		"origin": "Origine",
+		"msContents": "Contenuto",
+		"msItem": "Opera",
+		"copist": "Copista",
+		"sameAs": "Link esterno",
+		"dlclId": "ID progetto"
+	},
+	"ATTRIBUTE_NAMES": {
+		"type": "Tipo",
+		"value": "Valore",
+		"when": "Data",
+		"when-iso": "Data",
+		"when-print": "Data di pubblicazione",
+		"when-manuscript": "Data di creazione",
+		"when-birth": "Data di nascita",
+		"when-death": "Data di morte",
+		"ref": "Riferimento",
+		"key": "Chiave",
+		"sameAs": "Identico a"
+	},
+	"ATTRIBUTE_VALUES": {
+		"m": "Maschio",
+		"f": "Femmina",
+		"religious": "Religioso",
+		"nobility": "Nobiltà",
+		"nickname": "Soprannome",
+		"pseudonym": "Pseudonimo",
+		"alternative": "Alternativo",
+		"translation": "Traduzione",
+		"civil": "Civile",
+		"military": "Militare",
+		"ecclesiastical": "Ecclesiastico",
+		"uniform": "Titolo uniforme",
+		"copist": "Copista",
+		"main": "Titolo principale",
+		"subseries": "Sottoserie",
+		"letter": "Lettera",
+		"attachment": "Allegato",
+		"transcription": "Trascrizione",
+		"print": "Stampa",
+		"manuscript": "Manoscritto",
+		"person": "Persona",
+		"settlement": "Città",
+		"nation": "Nazione",
+		"region": "Regione",
+		"hill": "Collina",
+		"park": "Parco",
+		"stream": "Torrente",
+		"bay": "Baia",
+		"continent": "Continente",
+		"historic-region": "Regione storica",
+		"VIAF": "VIAF",
+		"GND": "GND",
+		"ISNI": "ISNI",
+		"SBN": "SBN",
+		"geonames": "GeoNames"
 	},
 	"PROJECT_INFO": {
 		"AUTHOR": "Autore",
@@ -410,5 +519,6 @@
 	},
 	"PAGINATION": {
 		"PAGE_OF": "Pagina {{current}} di {{total}}"
-	}
+	},
+	"OF": "di"
 }
